// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Default > matches the snapshot 1`] = `"<div class="preloadImage"><span class="loader"><span class="visually-hidden">Loading image</span></span><img class="image" src="imageId" alt="Image" style="display: none;"></div>"`;

exports[`Default > when image prop is set to PhApplePodcastsLogo > matches the snapshot 1`] = `
"<div class="preloadImage">
  <div class="defaultImage">
    <phapplepodcastslogo class="icon"></phapplepodcastslogo>
  </div>
</div>"
`;

exports[`Default > when image prop is set to PhMusicNotes > matches the snapshot 1`] = `
"<div class="preloadImage">
  <div class="defaultImage">
    <phmusicnotes class="icon"></phmusicnotes>
  </div>
</div>"
`;

exports[`Default > when image prop is set to PhPlaylist > matches the snapshot 1`] = `
"<div class="preloadImage">
  <div class="defaultImage">
    <phplaylist class="icon"></phplaylist>
  </div>
</div>"
`;

exports[`Default > when image prop is set to PhRadio > matches the snapshot 1`] = `
"<div class="preloadImage">
  <div class="defaultImage">
    <phradio class="icon"></phradio>
  </div>
</div>"
`;

exports[`Default > when image prop is set to PhUsersThree > matches the snapshot 1`] = `
"<div class="preloadImage">
  <div class="defaultImage">
    <phusersthree class="icon"></phusersthree>
  </div>
</div>"
`;

exports[`Default > when image prop is set to PhVinylRecord > matches the snapshot 1`] = `
"<div class="preloadImage">
  <div class="defaultImage">
    <phvinylrecord class="icon"></phvinylrecord>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a none DEFAULT_IMAGE_ICONS icon > when alt prop is set to true > matches the snapshot 1`] = `"<div class="preloadImage"><span class="loader"><span class="visually-hidden">Loading image</span></span><img class="image" src="imageId" alt="Alt text for image" style="display: none;"></div>"`;

exports[`Default > when image prop is set to a none DEFAULT_IMAGE_ICONS icon > when image has finished loading > matches the snapshot 1`] = `"<div class="preloadImage"><span class="loader" style="display: none;"><span class="visually-hidden">Loading image</span></span><img class="image" src="imageId" alt="Alt text for image"></div>"`;

exports[`Default > when image prop is set to a none DEFAULT_IMAGE_ICONS icon > when image prop is a URL > matches the snapshot 1`] = `"<div class="preloadImage"><span class="loader"><span class="visually-hidden">Loading image</span></span><img class="image" src="https://test.com" alt="Image" style="display: none;"></div>"`;
